--- a/portfolio_ideta/contact.html
+++ b/portfolio_ideta/contact.html
@@ -34,9 +34,9 @@
             <div class="wrapper">
                 <nav class="pc_nav">
                     <ul>
-                        <li class="en here"><a href="./index.html">TOP</a></li>
+                        <li class="en"><a href="./index.html">TOP</a></li>
                         <li class="en"><a href="./about.html">ABOUT ME</a></li>
-                        <li class="en"><a href="#contact">CONTACT</a></li>
+                        <li class="en here"><a href="#contact">CONTACT</a></li>
                     </ul>
                     <div class="line_vertical"></div>
                     <ul>
