--- a/portfolio_ideta/works_bn.html
+++ b/portfolio_ideta/works_bn.html
@@ -24,6 +24,7 @@
                 h = d.documentElement, t = setTimeout(function () { h.className = h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive"; }, config.scriptTimeout), tk = d.createElement("script"), f = false, s = d.getElementsByTagName("script")[0], a; h.className += " wf-loading"; tk.src = 'https://use.typekit.net/' + config.kitId + '.js'; tk.async = true; tk.onload = tk.onreadystatechange = function () { a = this.readyState; if (f || a && a != "complete" && a != "loaded") return; f = true; clearTimeout(t); try { Typekit.load(config) } catch (e) { } }; s.parentNode.insertBefore(tk, s)
         })(document);
     </script>
+
 </head>
 
 <body>
@@ -34,37 +35,81 @@
         <div class="header">
             <div class="wrapper">
                 <nav class="pc_nav">
-                    <ul>
-                        <li class="en here"><a href="./index.html">TOP</a></li>
+                    <ul class="pc-nav_list">
+                        <li class="en"><a href="./index.html">TOP</a></li>
                         <li class="en"><a href="./about.html">ABOUT ME</a></li>
-                        <li class="en"><a href="#contact">CONTACT</a></li>
+                        <li class="en"><a href="./contact.html">CONTACT</a></li>
+                        <li>
+                            <ul class="icon">
+                                <li>
+                                    <div class="x">
+                                        <a href="https://x.com/rin_de_sign"> <img src="./images/logo-black.png"
+                                                alt="Xのアイコン">
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="list-insta">
+                                    <div class="insta">
+                                        <a href="https://www.instagram.com/rin_de_sing/"> <img
+                                                src="./images/Instagram_Glyph_Black.svg" alt="Xのアイコン">
+                                        </a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                     <div class="line_vertical"></div>
-                    <ul>
+                    <ul class="pc-nav_list">
                         <li class="en"><a href="./works_hp.html">HP</a></li>
                         <li class="en"><a href="./works_lp.html">LP</a></li>
-                        <li class="en"><a href="./works_bn.html">BANNER</a></li>
+                        <li class="en here"><a href="./works_bn.html">BANNER</a></li>
                         <li class="en not_btn">WORKS</li>
                     </ul>
                 </nav>
             </div>
-            <div class="sp_btn">
-                <div class="box"><span></span></div>
+
+            <div class="page_ttl bn">
+                <p class="en">WORKS</p>
+                <p class="en">BANNER</p>
             </div>
+
+            <div class="sp_btn"><span></span></div>
             <div class="sp_menu">
                 <div>
                     <div class="menu_portfolioname">
-                        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+                            THIS IS THE
+                            <span>KAORI’S PORTFORIO</span>.
+                        </p>
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+                            THIS IS THE
+                            <span>KAORI’S PORTFORIO</span>.
+                        </p>
                     </div>
-                    <div class="content">
+                    <div class="box">
                         <nav class="sp_nav">
-                            <ul>
-                                <li class="en"><a href="./index.html">TOP</a></li>
-                                <li class="en"><a href="./about.html">ABOUT ME</a></li>
-                                <li class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></li>
-                                <li class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></li>
-                                <li class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></li>
-                                <li class="en"><a href="./contact.html">CONTACT</a></li>
+                            <ul class="sp-nav_list">
+                                <li class="en sp-nav_listitem current"><a href="./index.html">TOP</a></li>
+                                <li class="en sp-nav_listitem"><a href="./about.html">ABOUT ME</a></li>
+                                <li class="en sp-nav_listitem"><a href="./works_hp.html">HP<span>WORKS</span></a>
+                                </li>
+                                <li class="en sp-nav_listitem"><a href="./works_lp.html">LP<span>WORKS</span></a>
+                                </li>
+                                <li class="en sp-nav_listitem"><a href="./works_bn.html">BANNER<span>WORKS</span></a>
+                                </li>
+                                <li class="en sp-nav_listitem"><a href="./contact.html">CONTACT</a></li>
+                                <li class="sp-nav_iconlist">
+                                    <ul class="sp-icon">
+                                        <li class="en sp-icon_txt">SNS</li>
+                                        <li class="en sp-icon_x"><a href="https://x.com/rin_de_sign"><img
+                                                    src="./images/logo-black.png" alt="Xのアイコン"></a></li>
+                                        <li class="en sp-icon_insta"><a
+                                                href="https://www.instagram.com/rin_de_sing/"><img
+                                                    src="./images/Instagram_Glyph_Black.svg" alt="Instagramのアイコン"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+
                             </ul>
                         </nav>
                         <div class="triangle_top"></div>
@@ -73,14 +118,27 @@
                     </div>
                 </div>
             </div>
-
+            <div class="fade-effect"></div>
         </div>
     </header>
 
     <!-- 左固定アニメーション -->
 
     <div class="top_portfolioname">
-        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE
+            <span>KAORI’S PORTFORIO</span>.
+        </p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+            THIS IS THE
+            <span>KAORI’S PORTFORIO</span>.
+        </p>
+    </div>
+
+    <!-- コピーライト -->
+
+    <div class="copy">
+        <p> <small>&copy; 2024 KAORI'S DESIGN</small>
+        </p>
     </div>
     <div class="bg"></div>
 
@@ -93,6 +151,8 @@
             <!-- PC版 -->
 
             <div class="pc_container wrapper">
+                <div class="scrolldown2"><span>SCROLL</span></div>
+
                 <div class="contents">
                     <a href="./works_bn_detail.html" class="img_square floatup">
                         <img src="./images/bn_supaisukennkyuujyo_1.jpg">
@@ -117,10 +177,12 @@
 
             <div class="sp-container">
                 <div class="wrapper">
-                    <div class="page_ttl">
+                    <div class="scrolldown2"><span>SCROLL</span></div>
+
+                    <!-- <div class="page_ttl">
                         <p class="en">WORKS</p>
                         <p class="en">BANNER</p>
-                    </div>
+                    </div> -->
                     <div class="inner">
                         <div class="block">
                             <div class="contents">
@@ -231,21 +293,32 @@
         $(function () {
             const $effect = $('.fade-effect');
             const $menu = $('.sp_menu');
+            $effect.hide();
             $('.sp_btn').on('click', function () {
 
                 $('.sp_btn').toggleClass('open');
 
                 if ($menu.is(':visible')) {
                     $effect.addClass('show');
+                    $effect.show()
                     setTimeout(function () {
                         $effect.removeClass('show');
                         $menu.hide();
+                        setTimeout(function () {
+                            $effect.hide()
+                        }, 200)
                     }, 500)
                 } else {
                     $effect.addClass('show');
+                    $effect.show()
+
                     setTimeout(function () {
                         $effect.removeClass('show');
                         $menu.show();
+                        setTimeout(function () {
+                            $effect.hide()
+                        }, 200)
+
                     }, 500)
                 }
             })
