--- a/portfolio_ideta/works_hp.html
+++ b/portfolio_ideta/works_hp.html
@@ -34,37 +34,78 @@
         <div class="header">
             <div class="wrapper">
                 <nav class="pc_nav">
-                    <ul>
-                        <li class="en here"><a href="./index.html">TOP</a></li>
+                    <ul class="pc-nav_list">
+                        <li class="en"><a href="./index.html">TOP</a></li>
                         <li class="en"><a href="./about.html">ABOUT ME</a></li>
-                        <li class="en"><a href="#contact">CONTACT</a></li>
+                        <li class="en"><a href="./contact.html">CONTACT</a></li>
+                        <li>
+                            <ul class="icon">
+                                <li>
+                                    <div class="x">
+                                        <a href="https://x.com/rin_de_sign"> <img src="./images/logo-black.png"
+                                                alt="Xのアイコン">
+                                        </a>
+                                    </div>
+                                </li>
+                                <li class="list-insta">
+                                    <div class="insta">
+                                        <a href="https://www.instagram.com/rin_de_sing/"> <img
+                                                src="./images/Instagram_Glyph_Black.svg" alt="Xのアイコン">
+                                        </a>
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                     <div class="line_vertical"></div>
-                    <ul>
-                        <li class="en"><a href="./works_hp.html">HP</a></li>
+                    <ul class="pc-nav_list">
+                        <li class="en here"><a href="./works_hp.html">HP</a></li>
                         <li class="en"><a href="./works_lp.html">LP</a></li>
                         <li class="en"><a href="./works_bn.html">BANNER</a></li>
                         <li class="en not_btn">WORKS</li>
                     </ul>
                 </nav>
             </div>
-            <div class="sp_btn">
-                <div class="box"><span></span></div>
+            <div class="page_ttl works">
+                <p class="en">WORKS</p>
+                <p class="en">HP</p>
             </div>
+
+            <div class="sp_btn"><span></span></div>
             <div class="sp_menu">
                 <div>
                     <div class="menu_portfolioname">
-                        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+                            THIS IS THE
+                            <span>KAORI’S PORTFORIO</span>.
+                        </p>
+                        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+                            THIS IS THE
+                            <span>KAORI’S PORTFORIO</span>.
+                        </p>
                     </div>
-                    <div class="content">
+                    <div class="box">
                         <nav class="sp_nav">
-                            <ul>
-                                <li class="en"><a href="./index.html">TOP</a></li>
-                                <li class="en"><a href="./about.html">ABOUT ME</a></li>
-                                <li class="en"><a href="./works_hp.html">HP<span>WORKS</span></a></li>
-                                <li class="en"><a href="./works_lp.html">LP<span>WORKS</span></a></li>
-                                <li class="en"><a href="./works_bn.html">BANNER<span>WORKS</span></a></li>
-                                <li class="en"><a href="./contact.html">CONTACT</a></li>
+                            <ul class="sp-nav_list">
+                                <li class="en sp-nav_listitem current"><a href="./index.html">TOP</a></li>
+                                <li class="en sp-nav_listitem"><a href="./about.html">ABOUT ME</a></li>
+                                <li class="en sp-nav_listitem"><a href="./works_hp.html">HP<span>WORKS</span></a></li>
+                                <li class="en sp-nav_listitem"><a href="./works_lp.html">LP<span>WORKS</span></a></li>
+                                <li class="en sp-nav_listitem"><a href="./works_bn.html">BANNER<span>WORKS</span></a>
+                                </li>
+                                <li class="en sp-nav_listitem"><a href="./contact.html">CONTACT</a></li>
+                                <li class="sp-nav_iconlist">
+                                    <ul class="sp-icon">
+                                        <li class="en sp-icon_txt">SNS</li>
+                                        <li class="en sp-icon_x"><a href="https://x.com/rin_de_sign"><img
+                                                    src="./images/logo-black.png" alt="Xのアイコン"></a></li>
+                                        <li class="en sp-icon_insta"><a
+                                                href="https://www.instagram.com/rin_de_sing/"><img
+                                                    src="./images/Instagram_Glyph_Black.svg" alt="Instagramのアイコン"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+
                             </ul>
                         </nav>
                         <div class="triangle_top"></div>
@@ -73,14 +114,27 @@
                     </div>
                 </div>
             </div>
-
+            <div class="fade-effect"></div>
         </div>
     </header>
 
     <!-- 左固定アニメーション -->
 
     <div class="top_portfolioname">
-        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE
+            <span>KAORI’S PORTFORIO</span>.
+        </p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>KAORI’S PORTFORIO</span>.THANKS TO COMING.
+            THIS IS THE
+            <span>KAORI’S PORTFORIO</span>.
+        </p>
+    </div>
+
+    <!-- コピーライト -->
+
+    <div class="copy">
+        <p> <small>&copy; 2024 KAORI'S DESIGN</small>
+        </p>
     </div>
     <div class="bg"></div>
 
@@ -93,16 +147,18 @@
             <!-- PC版 -->
 
             <div class="pc_container wrapper">
-                <div class="scrolldown2"><span>Scroll</span></div>
+                <div class="scrolldown2"><span>SCROLL</span></div>
                 <div class="content">
-                    <img src="./images/hp_cafe_1.png">
+                    <a href="./works_hp_detail.html" class="img_square floatup">
+                        <img src="./images/hp_cafe_sp_1@2x.png"></a>
                     <p class="ttl">カフェサイト（架空）</p>
                     <div>
                         <p>レスポンシブ</p>
                     </div>
                 </div>
                 <div class="content">
-                    <img src="./images/works_hp_00.png">
+                    <a tabindex="-1" class="img_square">
+                        <img src="./images/works_hp_00.png"></a>
                     <p class="ttl none">-</p>
                     <p class="en">In production</p>
                     <div>
@@ -110,7 +166,8 @@
                     </div>
                 </div>
                 <div class="content">
-                    <img src="./images/works_hp_00.png">
+                    <a tabindex="-1" class="img_square">
+                        <img src="./images/works_hp_00.png"></a>
                     <p class="ttl none">-</p>
                     <p class="en">In production</p>
                     <div>
@@ -123,14 +180,17 @@
 
             <div class="sp_container">
                 <div class="wrapper">
-                    <div class="page_ttl">
+                    <div class="scrolldown2"><span>SCROLL</span></div>
+
+                    <!-- <div class="page_ttl">
                         <p class="en">WORKS</p>
                         <p class="en">HP</p>
-                    </div>
+                    </div> -->
                     <div class="inner">
                         <div class="contents">
                             <div class="sp_img">
-                                <img src="./images/hp_cafe_2.jpg" alt="">
+                                <a href="./works_hp_detail.html" class="img_square floatup">
+                                    <img src="./images/hp_cafe_sp_2@2x-80.jpg" alt=""></a>
                             </div>
                             <div class="txt">
                                 <h2>カフェサイト（架空）</h2>
@@ -142,7 +202,7 @@
                                 <p>in production</p>
                             </div>
                             <div class="txt_none">
-                                <h2>カフェサイト（架空）</h2>
+                                <h2></h2>
                                 <p>レスポンシブ</p>
                             </div>
                         </div>
@@ -151,7 +211,7 @@
                                 <p>in production</p>
                             </div>
                             <div class="txt_none">
-                                <h2>カフェサイト（架空）</h2>
+                                <h2></h2>
                                 <p>レスポンシブ</p>
                             </div>
                         </div>
@@ -166,7 +226,7 @@
 
             <div class="link">
                 <div class="wrapper">
-                    <a href="">
+                    <a href="" class="float">
                         <div class="btn">
                             <p class="en">CONTACT</p>
                             <img src="./images/mail.svg">
@@ -236,21 +296,32 @@
         $(function () {
             const $effect = $('.fade-effect');
             const $menu = $('.sp_menu');
+            $effect.hide();
             $('.sp_btn').on('click', function () {
 
                 $('.sp_btn').toggleClass('open');
 
                 if ($menu.is(':visible')) {
                     $effect.addClass('show');
+                    $effect.show()
                     setTimeout(function () {
                         $effect.removeClass('show');
                         $menu.hide();
+                        setTimeout(function () {
+                            $effect.hide()
+                        }, 200)
                     }, 500)
                 } else {
                     $effect.addClass('show');
+                    $effect.show()
+
                     setTimeout(function () {
                         $effect.removeClass('show');
                         $menu.show();
+                        setTimeout(function () {
+                            $effect.hide()
+                        }, 200)
+
                     }, 500)
                 }
             })
